[gd_scene load_steps=13 format=3 uid="uid://024qtd7ahmfb"]

[ext_resource type="Script" uid="uid://bkaoxjsh3sgu2" path="res://scenes/main/testing.gd" id="1_0wfyh"]
[ext_resource type="FontFile" uid="uid://c022ogphrgx6o" path="res://assets/VAGABONDED-BOLD.TTF" id="3_6q06x"]
[ext_resource type="PackedScene" uid="uid://b0dw3hyhtyow2" path="res://scenes/player/player.tscn" id="3_sugp2"]
[ext_resource type="PackedScene" uid="uid://dj02ug1o3ysit" path="res://scenes/collectibles/collectible.tscn" id="5_collect"]
[ext_resource type="PackedScene" uid="uid://imdjiojyjkr7" path="res://scenes/main/flatmap.tscn" id="6_ismap"]
[ext_resource type="Script" uid="uid://cgjy8m8js40ne" path="res://scenes/main/title.gd" id="9_m3u8n"]
[ext_resource type="Texture2D" uid="uid://b71706blkcw42" path="res://assets/images/arrowKeys2x.png" id="11_8xyq7"]
[ext_resource type="Texture2D" uid="uid://csy8a42wvmn2u" path="res://assets/images/dragonflygrass.png" id="12_blune"]
[ext_resource type="PackedScene" uid="uid://ou5od6b1el2o" path="res://scenes/objects/wall.tscn" id="13_wall"]
[ext_resource type="PackedScene" uid="uid://b4rhw2xkiuvrs" path="res://scenes/objects/breakable.tscn" id="14_break"]
[ext_resource type="Script" uid="uid://dhvt5qh8kl8gk" path="res://scenes/main/isometric_grid.gd" id="15_grid"]

[sub_resource type="LabelSettings" id="LabelSettings_ow5a4"]
font = ExtResource("3_6q06x")
font_size = 28
font_color = Color(1, 0.301961, 0.301961, 1)
shadow_size = 9
shadow_color = Color(0.756863, 0.376471, 0.509804, 1)
shadow_offset = Vector2(3, 6)

[node name="Testing" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_0wfyh")

[node name="IsometricMap" parent="." instance=ExtResource("6_ismap")]
z_index = -1
scale = Vector2(0.994219, 1)
metadata/_edit_lock_ = true

[node name="IsometricGrid" type="Node2D" parent="."]
z_index = 2
position = Vector2(0, -168)
script = ExtResource("15_grid")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TestModeLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -174.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 36.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 18
text = "EXPERIMENTAL (DANGEROUS)"
horizontal_alignment = 2

[node name="GridToggleButton" type="Button" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 90.0
offset_bottom = 40.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.5, 0.8, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6)
theme_override_colors/font_color = Color(0.3, 0.7, 1, 1)
theme_override_colors/font_focus_color = Color(0.3, 0.7, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.9, 1, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 16
text = "Grid: ON"

[node name="TitleLabel" type="Label" parent="."]
offset_left = -184.0
offset_top = -275.0
offset_right = 184.0
offset_bottom = -182.0
text = "TESTING SCENE"
label_settings = SubResource("LabelSettings_ow5a4")
horizontal_alignment = 1
script = ExtResource("9_m3u8n")

[node name="nose" parent="." instance=ExtResource("3_sugp2")]
z_index = 10
position = Vector2(-102, -26)

[node name="CommonCollectible" parent="." instance=ExtResource("5_collect")]
z_index = 5
position = Vector2(-48, 58)
collectible_name = "Coin"
collectible_message = "You found a coin!"
points = 10
particles_color = Color(1, 0.85, 0, 1)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="MapObjects" type="Node2D" parent="."]
z_index = 5
y_sort_enabled = true

[node name="GrassSprite" type="Sprite2D" parent="MapObjects"]
position = Vector2(-48, 54)
texture = ExtResource("12_blune")

[node name="Wall1" parent="MapObjects" instance=ExtResource("13_wall")]
visible = false
position = Vector2(34, -120)

[node name="Wall2" parent="MapObjects" instance=ExtResource("13_wall")]
visible = false
position = Vector2(50, -112)

[node name="Wall3" parent="MapObjects" instance=ExtResource("13_wall")]
visible = false
position = Vector2(66, -104)

[node name="Breakable1" parent="MapObjects" instance=ExtResource("14_break")]
visible = false
position = Vector2(144, -80)

[node name="Breakable2" parent="MapObjects" instance=ExtResource("14_break")]
visible = false
position = Vector2(176, -64)

[node name="Sprite2D3" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(225, 138)
texture = ExtResource("11_8xyq7")

[connection signal="pressed" from="CanvasLayer/GridToggleButton" to="." method="_on_grid_toggle_button_pressed"]
